--- a/style.css
+++ b/style.css
@@ -1,21 +1,40 @@
 *{
-    padding: 0;
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
-}
-input{
-    padding: 5px;
-}
-
+}     
 .inputs{
     margin-top: 300px;
-    text-align: center;
-    display: flex;
     justify-content: center;
+    align-items: center;
+    display: flex; 
+    background-color: #f0f0f0;
 }
-button{
-    margin-top: 80px;
+input{
+    border-radius: 10px;
+    padding: 10px;
 }
-#base input{
-    margin-top: 30px;
+#cal{
+    padding: 10px;
+    margin: 10px;
+    border-radius: 10px;
+    color:yellowgreen;
+}
+
+#cal:hover{
+    background-color: blue;
+}
+p{
+    font-size: 20px;
+    color: blue;
+}
+h1{
+    text-align: center;
+    color: yellowgreen;
+}
+
+@media (max-width: 600px) {
+    .input {
+        margin-top: 10px;
+    }
 }
